--- a/index.html
+++ b/index.html
@@ -424,8 +424,8 @@
                 </div>
 
                 <div class="testi-slider-nav">
-                    <span class="prev"><i class="fas fa-angle-left"></i></span>
-                    <span class="next"><i class="fas fa-angle-right"></i></span>
+                    <span class="prev"><i class="fa fa-angle-left" style="font-size: 22px"></i></span>
+                    <span class="next"><i class="fa fa-angle-right" style="font-size: 22px"></i></span>
                 </div>
 
     
@@ -586,7 +586,7 @@ answers.forEach((event) => {
         <div class="row">
             <div class="contact-item">
                 <div class="contact-item inner">
-                    <i class="fas fa-phone"></i>
+                    <i class="fa fa-phone" style="font-size: 32px"></i>
                     <span>Phone</span>
                     <p>9613086017</p>
 
@@ -596,7 +596,7 @@ answers.forEach((event) => {
 
             <div class="contact-item">
                 <div class="contact-item inner">
-                    <i class="fas fa-envelope"></i>
+                    <i class="fa fa-envelope"></i>
                     <span>Email</span>
                     <p>trish313131@gmail.com</p>
                 </div>
@@ -604,7 +604,7 @@ answers.forEach((event) => {
 
             <div class="contact-item">
                 <div class="contact-item inner">
-                    <i class="fas fa-map-marker-alt"></i>
+                    <i class="fa fa-map-marker-alt"></i>
                     <span>Address</span>
                     <p>Lankeswar, Guwahati-14, Assam</p>
 
