--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ answers.forEach((event) => {
 
             <div class="contact-item">
                 <div class="contact-item inner">
-                    <i class="fa fa-map-marker-alt"></i>
+                    <i class="fa fa-map-marker" style="font-size: 32px"></i>
                     <span>Address</span>
                     <p>Lankeswar, Guwahati-14, Assam</p>
 
