--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="about-info">
                 <p><span>Heyy viewers , This is Aryadeep Gogoi this side ,a passionate and self-motivated first year student
                     at National institue of Technology silchar , learning 
-                    through experience. Further interested in other CCA include painting, playing intsruments, writing ,photography ,cooking,etc . A Guwahati city boy certainly out of the chaos of he city life.
+                    through experience. Further interested in other CCA include painting, playing intsruments, writing ,photography ,cooking,etc . A Guwahati city boy certainly out of the chaos of his city life.
                     
                     Exceptionally workaholic with proper time 
                     managaement strategies. Life is all about hurdles , so lets tackle them all.
