--- a/index.html
+++ b/index.html
@@ -377,6 +377,38 @@
             </div>
         </div>
 
+        <div class="testi-form">
+            <p>Feel free to fill the following form and let me know your feedback</p>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfLRPjxyX67-N4_TW9ldTczIeS7viIL6W9zzTCMJ7SiZEbH5Q/viewform">click here</a>
+        </div>
+
+        <style>
+            .testi-form p{
+                margin-left: 5vh;
+                margin-top: 28vh;
+                max-width: 30vh;
+                text-align: justify;
+                position: absolute;
+                font-family: Georgia, 'Times New Roman', Times, serife;
+                font-size: 2.2vh;
+                
+
+            }
+
+
+            .testi-form a{
+                margin-left: 14vh;
+                margin-top: 38vh;
+                position: absolute;
+                font-family: Georgia, 'Times New Roman', Times, serif;
+                background-color: rgb(32, 3, 54);
+                border-radius: 30px;
+                color: rgb(240, 197, 251);
+                padding:  0.3%;
+                box-shadow: 0 0 1vh yellow;
+            }
+        </style>
+
         <div class="row">
             <div class="testi-box">
                 <div class="testi-slider">
